    - createShortcutBar now module-level function and basically is the API (barring back-compatibility)
    - Automatic handling of application calling stop_emission method in a handler.
	(Prevent it from disabling recording). Does not yet handle returning False.
    - Now automatically handle application calling gtk.events_pending
	Basically preventing a hang because of PyUseCase's idle handler causing it to always return True.
    - Better error handling for gtk.TreeView events
PyGTK Auto-logging (gtklogger/*)
    - Widget description support / improvement
	gtk.CellView entirely new
	gtk.ToggleButton redone
	gtk.HButtonBox now logged horizontally like gtk.HBox
	gtk.TreeView works also when the data is not in the gtk.TreeModel but is found via set_cell_data_func
	gtk.Menu only gets described when it is visible, like everything else
	gtk.TextView description no longer discards leading whitespace
	gtk.Image :
	  states file name if created with gtk.gdk.pixbuf_new_from_file
	  states XPM and a number if created with gtk.gdk.pixbuf_new_from_xpm_data
	  can be given a name in the code via image.set_data("name", "My Image")
    - Widget update description support / improvement
	gtk.Window now describes changes of title
    - Ordering of visibility/sensitivity change descriptions now sorted
	(doesn't depend on order of object creation in the app)

Version 3.0.1:
-------------
Enhancement/bugfix:
    - Now automatically update the UI map file appropriately when a widget is named
Bug fixes:
    - Auto-logging now ignores tooltip windows, preventing sporadic description of them when system is loaded
    - Fixed stacktrace from logging gtk.EntryCompletion windows
    - Check Python version >= 2.4
    - Show help on no args instead of stacktrace
    - Update the correct UI map file when there are several and one already has a matching section
    - Don't stacktrace if gtk.TreeView has no model attached
    - Don't stacktrace if gtk.ComboBox is empty or has no model attached