@@ -160,4 +160,5 @@ Bug fixes:
     - Show help on no args instead of stacktrace
     - Update the correct UI map file when there are several and one already has a matching section
     - Don't stacktrace if gtk.TreeView has no model attached
+    - Don't stacktrace if gtk.TreeView has non-unique full paths
     - Don't stacktrace if gtk.ComboBox is empty or has no model attached
